- limit image size to maximal 100% width to prevent overflow  - bump version

--- a/src/index.styl
+++ b/src/index.styl
@@ -11,6 +11,8 @@
     font-weight: inherit
   strong
     font-weight: bold
+  img
+    max-width: 100%
 .ql-tool
   position: sticky
   top: 0
